[package]
name = "rip"
version = "0.1.0"
authors = ["Masahiro Itabashi <itabasi.lm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
typed-arena = "2.0.1"
